# Junction2023

./: README.md  docker-compose.yml
api/: .gitignore  Dockerfile  compose.yml  go.mod  go.sum  main.go
api/card/: card-handlers.go  card-routes.go  card-services.go  card-types.go
api/db/: db-models.go  db.go
api/user/: user-handlers.go  user-routes.go  user-services.go  user-types.go
api/utils/: config.go
api/video/: video-handlers.go  video-routes.go
web/: Cargo.toml  README.MD  index.html  rustc-ice-2023-11-10T22_22_09-58006.txt  rustc-ice-2023-11-10T22_22_09-58007.txt  rustc-ice-2023-11-10T22_22_09-58014.txt  rustc-ice-2023-11-10T22_22_14-58065.txt  rustc-ice-2023-11-10T22_22_14-58066.txt  rustc-ice-2023-11-10T22_22_14-58076.txt
web/src/: components.rs  index.scss  main.rs
web/src/components/: card.rs  card.scss  profile.rs  profile.scss  top_bar.rs  top_bar.scss
web/src/components/card/: buttons.rs  buttons.scss  card_info.rs  card_info.scss  card_title.rs  card_title.scss
