[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos-use = { version = "0.8.2", features = ["storage"] }
leptos_icons = { version = "0.1.0", features = [
  "BsRocketTakeoffFill",
  "BiLikeSolid",
] }
reqwasm = "0.5.0"
serde = { version = "1.0.192", features = ["derive"] }

[build-dependencies]
web-sys = { version = "0.3.65", features = ["Window", "Storage"] }
